# Grape_Engine

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: Logging System.md  coding-style.md
engine/logger/: logger.c  logger_internal.h
engine/logger/backends/: logger_console.c
examples/: hello_logger.c  test.c  test_performace.c
include/log/: grape_system_log.h  grape_system_log_backend.h  grape_system_log_types.h
include/logger/: logger.h  logger_backend.h  logger_types.h
src/log/: grape_system_log.c  grape_system_log_internal.h
src/log/backends/: grape_backend_console.c
